# web_course

./: README.rst  pyproject.toml  setup.cfg
app/: contracts.py  main.py  routers.py
