[tool.poetry]
name = "start-pack"
version = "0.1.0"
description = ""
authors = ["Sasha M"]
license = "MIT"
readme = "README.md"
packages = [{include = "start_pack"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
flake8 = "^5.0.4"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
pandas = "^1.5.0"
numpy = "^1.23.3"
black = "^22.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
